# ESP-KF

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.defaults
.github/workflows/: main.yml
DEV logs/5/7/: 26-usb-hid.md
boards/: demo_macropad.yaml  pros3d_option1.yaml  xiao_esp32s3.yaml
components/espkm_ble/: CMakeLists.txt  Kconfig  ble.c
components/espkm_ble/include/espkm/: ble.h
components/espkm_cli/: CMakeLists.txt  Kconfig  cli.c  cli_stub.c
components/espkm_cli/include/espkm/: cli.h
components/espkm_core/: CMakeLists.txt  Kconfig  combos.c  core.c  debug_ring.c  kb_time.c  keyboard_default.c  keycodes.c  layers.c  report_builder.c  stats.c  taphold.c
components/espkm_core/include/espkm/: combos.h  core.h  debug_ring.h  keyboard_shim.h  keycodes.h  layers.h  report_builder.h  stats.h  taphold.h
components/espkm_drivers/: CMakeLists.txt  Kconfig  matrix_direct.c
components/espkm_drivers/include/espkm/: matrix.h
components/espkm_macros/: CMakeLists.txt  macros.c
components/espkm_router/: CMakeLists.txt  Kconfig  router.c
components/espkm_usb/: CMakeLists.txt  Kconfig  usb.c  usb_desc.c  usb_stub.c
components/espkm_usb/include/espkm/: usb.h
config/: flash.yaml
docs/: ARCHITECTURE.md  BOARD_PROFILES.md  DEBUGGING.md  GETTING_STARTED.md  PROS3D_USB_NOTE.md
keyboards/demo_macropad/: CMakeLists.txt  keyboard.c  keyboard.h
languages/: en_us.yaml  es_es.yaml  fr_fr.yaml  ko_kr.yaml  tr_tr.yaml
main/: CMakeLists.txt  app_main.c  idf_component.yml
tests/: test_espkm_cli.py
tools/: __init__.py  espkm.py
(+4 files in other folders)
